--- a/src/main/resources/homework19/homework19_statistic.org
+++ b/src/main/resources/homework19/homework19_statistic.org
@@ -10,7 +10,7 @@ Answer#1: https://docs.google.com/forms/d/e/1FAIpQLSd4UoTaQ7B4nCLLBmYegvYYIU680q
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 20.01.2021 19:20 | 20.01.2021 19:52 |                         1.8 | 17/23           |      72 | Pass   |
 | 2 | 25.02.2021 16:40 | 25.02.2021 17:15 |                         1.6 | 19/23           |      82 | Pass   |
-| 3 | 02.04.2021       |                  |                             |                 |         |        |
+| 3 | 02.04.2021       |                  |                             | 17/23           |      72 | Pass   |
 
 
 
@@ -23,4 +23,5 @@ Answer#2: https://docs.google.com/forms/d/e/1FAIpQLSd1rLAtPuX9aVLJ_KxsWZsj3axxwK
 | 1 | 23.01.2021 15:30 | 23.01.2021 16:15 |                         0.9 | 35/50           |      70 | Pass   |
 | 2 | 24.01.2021 11:25 | 24.01.2021 11:52 |                        0.54 | 47/50           |      94 | Pass   |
 | 3 | 25.02.2021 21:25 | 25.02.2021 22:15 |                         1.0 | 41/50           |      82 | Pass   |
+| 4 | 02.04.2023       |                  |                             | 45/50           |      90 | Pass   |
 
