--- a/src/main/resources/homework20/homework20_statistic.org
+++ b/src/main/resources/homework20/homework20_statistic.org
@@ -1,6 +1,7 @@
 ДЗ#20: Объявление и применение коллекций ArrayList заданного типа  
 
 Test: https://forms.gle/fETET5hNPKTVL7cZ7
+Answer: https://docs.google.com/forms/d/e/1FAIpQLScI0oH4uIdEfkHI36UT7lPjoZxALdGY8FVlO1B-iaIMGbm9uw/viewscore?viewscore=AE0zAgCowtzjmTLHpqON0ucTYOWqtiBYeP9xk0g_c7Mks4P0yh7B3Ym4EGNllXM5CuJIsys
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -11,5 +12,6 @@ Test: https://forms.gle/fETET5hNPKTVL7cZ7
 | 2 | 24.01.2021 22:15 | 24.01.2021 22:35 |                        0.86 | 20/23           |      86 | Pass   |
 | 3 | 24.02.2021 22:10 | 24.02.2021 22:45 |                         1.6 | 12/23           |      55 | Fail   |
 | 4 | 25.02.2021 15:00 | 25.02.2021 15:35 |                         1.3 | 19/23           |      82 | Pass   |
+| 5 | 09.04.2023       |                  |                             |                 |         |        |
 
 
