--- a/src/main/resources/homework20/homework20_statistic.org
+++ b/src/main/resources/homework20/homework20_statistic.org
@@ -12,6 +12,6 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScI0oH4uIdEfkHI36UT7lPjoZxALdGY
 | 2 | 24.01.2021 22:15 | 24.01.2021 22:35 |                        0.86 | 20/23           |      86 | Pass   |
 | 3 | 24.02.2021 22:10 | 24.02.2021 22:45 |                         1.6 | 12/23           |      55 | Fail   |
 | 4 | 25.02.2021 15:00 | 25.02.2021 15:35 |                         1.3 | 19/23           |      82 | Pass   |
-| 5 | 09.04.2023       |                  |                             |                 |         |        |
+| 5 | 09.04.2023       |                  |                             | 11/23           |      50 | Fail   |
 
 
