--- a/src/main/resources/homework21/homework21_statistic.org
+++ b/src/main/resources/homework21/homework21_statistic.org
@@ -13,6 +13,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSce1BZGFYxd6v2vgbVGRCMw-I2DHmpf
 | 3 | 28.01.2021 21:10 | 25.01.2021 21:30 |                         1.0 | 14/20           |      70 | Pass   |
 | 4 | 24.02.2021 19:20 | 24.02.2021 19:35 |                         0.9 | 15/20           |      75 | Pass   |
 | 5 | 09.04.2023       |                  |                             | 11/20           |      55 | Fail   |
+| 6 | 24.04.2023       |                  |                             | 14/20           |      70 | Pass   |
 
 
 
