--- a/src/main/resources/homework22/homework22_statistic.org
+++ b/src/main/resources/homework22/homework22_statistic.org
@@ -1,6 +1,7 @@
 ДЗ#22: Составление простого лямбда-выражения, которое потребляет Predicate 
 
 Test: https://forms.gle/kcPGsfDdLArPsZJNA
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSdHk9Tw6NxLujLbCfCguQv10mF6Bk1gOin0Mfgff796JPo5TA/viewscore?viewscore=AE0zAgDIhJW-CSn9FQ2g3FNlOQzINzBRvv0MmmOrUI3UzHc7QhH0EsGCU7170Kg7C--kt4Q
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -10,6 +11,7 @@ Test: https://forms.gle/kcPGsfDdLArPsZJNA
 | 1 | 31.01.2021 18:30 | 31.01.2021 18:50 |                        0.65 | 6/13            |      45 | Fail   |
 | 2 | 02.02.2021 19:45 | 02.02.2021 20:06 |                        1.61 | 12/13           |      92 | Pass   |
 | 3 | 24.02.2021 15:30 | 24.02.2021 15:50 |                         1.5 | 10/13           |      80 | Pass   |
+| 4 | 24.04.2021 15:30 |                  |                             | 9/13            |      69 | Pass   |
 
 
 
