--- a/src/main/resources/homework01/homework01_statistic.org
+++ b/src/main/resources/homework01/homework01_statistic.org
@@ -6,9 +6,10 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScJIB21Dp37XxsHVMuiebsrkphEHG6K
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин.
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
-|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 03.11.2020 21:00 | 03.11.2020 21:30 |                             | 21/29           |      72 | Pass   |
-| 2 | 07.02.2020 15:35 | 07.02.2020 16:15 |                         1.6 | 23/29           |      79 | Pass   |
-| 3 | 14.11.2022       |                  |                             |                 |      83 | Pass   |
-| 4 | 25.11.2022       |                  |                             |                 |      82 | Pass   |
+| # | Start date |   End date | Average time response (min) | Correct answers | Percent | Result |
+|---+------------+------------+-----------------------------+-----------------+---------+--------|
+| 1 | 03.11.2020 | 03.11.2020 |                             | 21/29           |      72 | Pass   |
+| 2 | 07.02.2020 | 07.02.2020 |                         1.6 | 23/29           |      79 | Pass   |
+| 3 | 14.11.2022 |            |                             |                 |      83 | Pass   |
+| 4 | 25.11.2022 |            |                             |                 |      82 | Pass   |
+| 5 | 17.09.2023 |            |                             |                 |      93 | Pass   |
