--- a/src/main/resources/homework02/homework02_statistic.org
+++ b/src/main/resources/homework02/homework02_statistic.org
@@ -6,14 +6,11 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSeJifQTcc-KO6KSRYgcu7bJjCVN5P63
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-| # | Start date        | End date         | Average time response (min) | Correct answers | Percent | Result |
-|---+-------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 06.11..2020 21:00 | 06.11.2020 21:30 |                             | 15/27           |      55 | Fail   |
-| 2 | 13.11.2020 12:00  | 13.11.2020 12:30 |                             | 19/27           |      70 | Pass   |
-| 3 | 07.02.2020 16:40  | 07.02.2020 17:10 |                         1.7 | 15/27           |      55 | Fail   |
-| 4 | 17.11.2022        |                  |                             |                 |      88 | Pass   |
-| 5 | 25.12.2022        |                  |                             |                 |      70 | Pass   |
-
-
-
-
+| # |  Start date |   End date | Average time response (min) | Correct answers | Percent | Result |
+|---+-------------+------------+-----------------------------+-----------------+---------+--------|
+| 1 | 06.11..2020 | 06.11.2020 |                             | 15/27           |      55 | Fail   |
+| 2 |  13.11.2020 | 13.11.2020 |                             | 19/27           |      70 | Pass   |
+| 3 |  07.02.2020 | 07.02.2020 |                         1.7 | 15/27           |      55 | Fail   |
+| 4 |  17.11.2022 |            |                             |                 |      88 | Pass   |
+| 5 |  25.12.2022 |            |                             |                 |      70 | Pass   |
+| 6 |  17.09.2023 |            |                             |                 |      77 | Pass   |
