--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -16,6 +16,7 @@ Test#1
 | 5 |       26.11.2022 |                  |                             |                 |      60 | Fail   |
 | 6 |       27.11.2022 |                  |                             |                 |     100 | Pass   |
 | 7 |       25.12.2022 |                  |                             |                 |      80 | Pass   |
+| 8 |       01.10.2023 |                  |                             |                 |      80 | Pass   |
 
 
 
@@ -29,6 +30,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti
 | 3 | 03.04.2021 10:30 | 03.04.2021 12:00 |                         1.8 | 39/50           |      78 | Pass   |
 | 4 | 26.11.2022       |                  |                             | 45/50           |      90 | Pass   |
 | 5 | 25.12.2022       |                  |                             |                 |      96 | Pass   |
+| 6 | 01.10.2023       |                  |                             |                 |      98 | Pass   |
 
 
 
