--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -17,7 +17,7 @@ Test#1
 | 6 | 26.11.2022       |                  |                             |                 |      61 | Fail   |
 | 7 | 04.12.2022       |                  |                             | 11/13           |      84 | Pass   |
 | 8 | 27.12.2022       |                  |                             |                 |      69 | Pass   |
-
+| 9 | 01.10.2023       |                  |                             | 11/13           |      84 | Pass   |
 
 
 Тест#2 
@@ -25,13 +25,14 @@ Test#1
  Test https://docs.google.com/forms/d/e/1FAIpQLScOiEdXeiI_sJmKXeXStEVSciIOdD3JfJ6DGvjny1ekt4lWgA/viewform
  Answer: https://docs.google.com/forms/d/e/1FAIpQLScOiEdXeiI_sJmKXeXStEVSciIOdD3JfJ6DGvjny1ekt4lWgA/viewscore?viewscore=AE0zAgB62nJkJkenvDTeTdUbK49nLTNT3FLm_sW6nrfuThZuqt9XKkIW3CCHaTj6oQF0-6g
 
-| # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
-|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 08.02.2021 15:25 | 08.02.2021 16:00 |                         0.7 | 41/50           |      82 | Pass   |
-| 2 | 17.04.2021 11:25 | 17.04.2021 13:00 |                         1.5 | 44/50           |      88 | Pass   |
-| 3 |       27.11.2022 |                  |                             |                 |      86 | Pass   |
-| 4 |       04.12.2022 |                  |                             | 50/50           |     100 | Pass   |
-| 5 |       28.12.2022 |                  |                             |                 |      94 | Pass   |
+| # | Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 08.02.2021 | 08.02.2021 16:00 |                         0.7 | 41/50           |      82 | Pass   |
+| 2 | 17.04.2021 | 17.04.2021 13:00 |                         1.5 | 44/50           |      88 | Pass   |
+| 3 | 27.11.2022 |                  |                             |                 |      86 | Pass   |
+| 4 | 04.12.2022 |                  |                             | 50/50           |     100 | Pass   |
+| 5 | 28.12.2022 |                  |                             |                 |      94 | Pass   |
+| 6 | 08.10.2023 |                  |                             |                 |      94 | Pass   |
 
 
 
