--- a/src/main/resources/homework04/homework04_statistic.org
+++ b/src/main/resources/homework04/homework04_statistic.org
@@ -13,7 +13,5 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScycljT6BOJservmUA13ly2aclZLyNV
 | 3 | 07.02.2021 19:15 | 07.02.2021 19:30 |                         0.9 | 13/14           |      92 | Pass   |
 | 4 | 21.11.2022       |                  |                             |                 |      78 | Pass   |
 | 5 | 25.12.2022       |                  |                             |                 |      85 | Pass   |
-
-
-
+| 6 | 24.09.2023       |                  |                             |                 |      92 | Pass   |
 
