--- a/src/main/resources/homework06/homework06_statistic.org
+++ b/src/main/resources/homework06/homework06_statistic.org
@@ -8,7 +8,8 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfz64I0Md5MMF9t0yPv3KmqtRtZts_u
 
 | # | Start date | End date | Average time response (min) | Correct answers | Percent | Result |
 |---+------------+----------+-----------------------------+-----------------+---------+--------|
-| 1 | 26.11.2022 |          |                             |                 |      15 | Fall   |
+| 1 | 26.11.2022 |          |                             | 2/9             |      15 | Fall   |
 | 2 | 27.11.2022 |          |                             |                 |      60 | Fall   |
 | 3 | 04.12.2022 |          |                             |                 |      77 | Pass   |
 | 4 | 27.12.2022 |          |                             |                 |      77 | Pass   |
+| 5 | 01.10.2023 |          |                             | 2/9             |      15 | Faile  |
