--- a/src/main/resources/homework09/homework09_statistic.org
+++ b/src/main/resources/homework09/homework09_statistic.org
@@ -19,6 +19,5 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfw2tGT1VRB_T6VeXImuwMmXYbwJlDD
 |  9 | 04.12.2022       |                  |                             | 9/12            |      76 | Pass   |
 | 10 | 29.12.2022       |                  |                             |                 |      66 | Fail   |
 | 11 | 30.12.2022       |                  |                             |                 |     100 | Pass   |
-
-
+| 12 | 14.10.2023       |                  |                             |                 |      75 | Pass   |
 
