--- a/src/main/resources/homework11/homework11_statistic.org
+++ b/src/main/resources/homework11/homework11_statistic.org
@@ -14,8 +14,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScXz9a-Jyr3dF8CiEsNBAZSi_tXHAdx
 | 3 | 13.02.2021 17:45 | 13.02.2021 18:25 |                         1.5 | 16/26           |      62 | Fail   |
 | 4 | 11.04.2021 14:20 | 11.04.2021 15:00 |                         1.5 | 19/26           |      73 | Pass   |
 | 5 | 07.01.2023       |                  |                             |                 |      69 | Pass   |
-
-
-
-
-
+| 6 | 15.10.2023       |                  |                             |                 |      65 | Pass   |
