--- a/src/main/resources/homework12/homework12_statistic.org
+++ b/src/main/resources/homework12/homework12_statistic.org
@@ -13,7 +13,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSeu0zwsvAPVfoW7gdibciBGjhrLNazz
 | 3 | 23.04.2021 12:10 | 23.04.2021 16:30 |                         1.5 | 8/13            |      61 | Fail   |
 | 4 | 24.04.2021 12:00 | 24.04.2021 11:20 |                         1.6 | 11/13           |      84 | Pass   |
 | 5 | 08.01.2023       |                  |                             |                 |      84 | Pass   |
-
-
-
-
+| 6 | 28.10.2023       |                  |                             |                 |      76 | Pass   |
