--- a/src/main/resources/homework13/homework13_statistic.org
+++ b/src/main/resources/homework13/homework13_statistic.org
@@ -14,6 +14,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfBmrimmHTrCOVwo38EjUaMd468itDk
 | 4 | 24.04.2021 14:15 | 24.04.2021 14:30 |                         1.5 | 10/13           |      76 | Pass   |
 | 5 | 25.04.2021 12:15 | 24.04.2021 14:40 |                         1.5 | 10/13           |      76 | Pass   |
 | 6 | 08.01.2023       |                  |                             |                 |      69 | Pass   |
+| 7 | 04.11.2023       |                  |                             |                 |      69 | Pass   |
 
 
 
