--- a/src/main/resources/homework14/homework14_statistic.org
+++ b/src/main/resources/homework14/homework14_statistic.org
@@ -13,3 +13,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfblhDYD9ffap-TrVvY2JKVjV1a4gbn
 | 3 | 15.02.2021 19:55 | 15.02.2021 20:30 |                         1.2 | 16/24           |      65 | Pass   |
 | 4 | 15.02.2021 22:40 | 15.02.2021 22:20 |                         1.5 | 19/24           |      79 | Pass   |
 | 5 | 08.01.2023       |                  |                             |                 |      79 | Pass   |
+| 6 | 05.11.2023       |                  |                             |                 |      66 | Pass   |
