test pass (hm#16)

--- a/src/main/resources/homework16/homework16_statistic.org
+++ b/src/main/resources/homework16/homework16_statistic.org
@@ -12,7 +12,13 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScEPFO1ChJwOGI9ZBXYb7wl-_wu9tfo
 | 2 | 17.02.2021 16:00 | 17.02.2021 17:00 |                         1.2 | 43/50           |      86 | Pass   |
 | 3 | 08.05.2021 14:15 | 08.05.2021 15:00 |                         1.5 | 31/50           |         | Fail   |
 | 4 | 15.01.2023       |                  |                             |                 |      84 | Pass   |
+| 5 | 11.02.2024       |                  |                             | 39/50           |      78 | Pass   |
 
 
 
+50 100
+39 x
 
+50x = 3900
+
+(/ 3900 50)
