--- a/src/main/resources/homework17/homework17_statistic.org
+++ b/src/main/resources/homework17/homework17_statistic.org
@@ -12,7 +12,5 @@ Answers: https://docs.google.com/forms/d/e/1FAIpQLSc40LYWjiNBdih3uI4ION9OgwS8RGA
 | 2 | 18.02.2021 16:45 | 18.02.2021 17:10 |                         1.0 | 21/25           |      84 | Pass   |
 | 3 | 04.03.2021 21:10 | 04.03.2021 21:40 |                         1.2 | 20/25           |      80 | Pass   |
 | 4 | 29.01.2023       |                  |                             | 23/25           |      92 | Pass   |
-
-
-
+| 5 | 18.02.2024       |                  |                             | 20/25           |      80 | Pass   |
 
