--- a/src/main/resources/homework20/homework20_statistic.org
+++ b/src/main/resources/homework20/homework20_statistic.org
@@ -14,6 +14,5 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScI0oH4uIdEfkHI36UT7lPjoZxALdGY
 | 4 | 25.02.2021 15:00 | 25.02.2021 15:35 |                         1.3 | 19/23           |      82 | Pass   |
 | 5 | 09.04.2023       |                  |                             | 11/23           |      50 | Fail   |
 | 6 | 23.04.2023       |                  |                             | 18/23           |      78 | Pass   |
-
-
+| 6 | 03.03.2024       |                  |                             | 14/23           |      60 | Fail   |
 
