--- a/src/main/resources/homework23/homework23_statistic.org
+++ b/src/main/resources/homework23/homework23_statistic.org
@@ -11,6 +11,6 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSf4SVAT2CiezoHbHv2XvzwK93tGhZYV
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 04.02.2021 12:05 | 04.02.2021 13:05 |                         1.2 | 37/50           |      74 | Pass   |
 | 2 | 05.02.2021 10:45 | 04.02.2021 11:20 |                         0.7 | 48/50           |      96 | Pass   |
-| 3 | 23.02.2021 18:50 | 23.02.2021 19:50 |                         1.5 | 39/50           |      70 | Pass   |
-
+| 3 | 23.02.2021 18:50 | 23.02.2021 19:50 |                         1.5 | 39/50           |      78 | Pass   |
+| 4 | 10.03.2024       |                  |                             | 38/50           |      76 | Pass   |
 
