--- a/src/main/resources/homework24/homework24_statistic.org
+++ b/src/main/resources/homework24/homework24_statistic.org
@@ -2,6 +2,7 @@
        Реализация принципов инкапсуляции в классе. Поведение объектных ссылок и примитивных переменных, передаваемых в методы.
 
 Test:  https://forms.gle/4G2WFLjmbUqqcGc6A
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSc4UG8_Zr_sxyUIzbU-t9wIPXh-Qn1XwWHk_Ft-3P_7oi6ZkA/viewscore?viewscore=AE0zAgCxNGpHf8wXWcY4R2v06j7pgR6BJV2vjxqfi3MrYGeTCFEFFqyOrO6SwR2g3DjE_dY
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -11,3 +12,4 @@ Test:  https://forms.gle/4G2WFLjmbUqqcGc6A
 | 1 | 05.02.2021 16:30 | 05.02.2021 17:40 |                        1.53 | 28/39           |      71 | Pass   |
 | 2 | 06.02.2021 13:00 | 06.02.2021 13:40 |                        1.00 | 36/39           |      92 | Pass   |
 | 3 | 22.02.2021 23:00 | 22.02.2021 23:50 |                         1.3 | 32/39           |      82 | Pass   |
+| 4 | 16.03.2024       |                  |                             | 26/30           |      66 | Pass   |
