--- a/src/main/resources/homework22/homework22_statistic.org
+++ b/src/main/resources/homework22/homework22_statistic.org
@@ -12,7 +12,6 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSdHk9Tw6NxLujLbCfCguQv10mF6Bk1g
 | 2 | 02.02.2021 19:45 | 02.02.2021 20:06 |                        1.61 | 12/13           |      92 | Pass   |
 | 3 | 24.02.2021 15:30 | 24.02.2021 15:50 |                         1.5 | 10/13           |      80 | Pass   |
 | 4 | 24.04.2021 15:30 |                  |                             | 9/13            |      69 | Pass   |
-
-
-
-
+| 5 | 09.03.2024       |                  |                             | 5/13            |      45 | Fail   |
+| 6 | 16.03.2024       |                  |                             | 5/13            |      45 | Fail   |
+| 7 | 23.03.2024       |                  |                             | 9/13            |      69 | Pass   |
