--- a/src/main/resources/homework26/homework26_statistic.org
+++ b/src/main/resources/homework26/homework26_statistic.org
@@ -1,13 +1,16 @@
 ДЗ#25: Создание и перегрузка конструкторов, включая влияние на дефолтный конструктор.
 
 Test: https://forms.gle/4nwS6Lj3DH7qcZoR9
+Answer: https://otus.ru/redirect/?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSeGLkH0bm8fGWy_WuFT8TOw7huisEbwz6Ia2zCPy9FXIGwt3Q%2Fviewscore%3Fviewscore%3DAE0zAgCUi2-5LOM4uEJKR6It9KX52q014vbpEmLYzBeE_hEXlXCl1cBcj8jyWQEWGolF7wg
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
-|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 14.02.2021 14:00 | 14.02.2021 14:50 |                        2.00 | 14/25           |      56 | Fail   |
-| 2 | 16.02.2021 17:05 | 16.02.2021 16:55 |                          4. | 20/25           |      80 | Pass   |
-
+| # | Start date |   End date | Correct answers | Percent | Result |
+|---+------------+------------+-----------------+---------+--------|
+| 1 | 14.02.2021 | 14.02.2021 | 14/25           |      56 | Fail   |
+| 2 | 16.02.2021 | 16.02.2021 | 20/25           |      80 | Pass   |
+| 3 | 18.03.2024 |            | 12/25           |      45 | Fail   |
+| 4 | 30.03.2024 |            | 18/25           |      72 | Pass   |
+| 5 | 31.03.2024 |            | 20/25           |      80 | Pass   |
 
