--- a/src/main/resources/homework29/homework29_statistic.org
+++ b/src/main/resources/homework29/homework29_statistic.org
@@ -1,6 +1,7 @@
 ДЗ#29: Необходимость в приведении типов. Пространства имён
 
 Test#1: https://forms.gle/LsjFWSZAKdZk5zxb8
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSdpvmLxb4uishrpAd1MyI_mX6qQBm71GsONyK20mhjKi-bI0w/viewscore?viewscore=AE0zAgDCuwcDleQ2edn2CGAXOxCP9uYyiqVSpzq_waUZBQ9gTl_Y-6bXHhhGryh6HG3tyK4
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -9,14 +10,13 @@ Test#1: https://forms.gle/LsjFWSZAKdZk5zxb8
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 10.03.2021 10:50 | 10.03.2021 11:25 |                         2.7 | 9/13            |      69 | Pass   |
 | 2 | 11.03.2021 14:50 | 11.03.2021 15:10 |                         1.5 | 11/13           |      84 | Pass   |
-
-
-https://docs.google.com/forms/d/e/1FAIpQLSdpvmLxb4uishrpAd1MyI_mX6qQBm71GsONyK20mhjKi-bI0w/viewscore?viewscore=AE0zAgDCuwcDleQ2edn2CGAXOxCP9uYyiqVSpzq_waUZBQ9gTl_Y-6bXHhhGryh6HG3tyK4
+| 3 | 07.04.2024       |                  |                             | 10/13           |      75 | Pass   |
 
 
 Test#2(весь модуль): https://forms.gle/M1aKsLE13Cd5HESW9
-
+Andwer: https://docs.google.com/forms/d/e/1FAIpQLScFobLdK0UXdpHj0RlGNM6ZI6ynRCicky7TAWD01R1iwjlG7Q/viewscore?viewscore=AE0zAgC3OJvyBLMekVG314H6wy0vomPG9_GahWw2aGXA5vAWK5DGcboPw_L4QUgMYJRvFio
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 10.03.2021 18:10 | 10.03.2021 19:35 |                         1.7 | 35/50           |      70 | Pass   |
 | 2 | 11.03.2021 15:45 | 11.03.2021 16:45 |                         1.2 | 44/50           |      88 | Pass   |
+| 3 | 07.04.2021       |                  |                             | 40/50           |      80 | Pass   |
