--- a/src/main/resources/homework30/homework30_statistic.org
+++ b/src/main/resources/homework30/homework30_statistic.org
@@ -2,7 +2,7 @@
 Работа с типичными классами исключений. Преимущества обработки исключений.
 
 Test: https://forms.gle/MwUpZEqTWg3dmek56
-
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSeSixKNQ7Cx4A98DkBGHvyQCoYLwWTEIW6fmjARh4myX4nu1g/viewscore?viewscore=AE0zAgDtg0SAoiEtJd_EjIULefKlgiKyeRTJ_tfYynCh6j1UXANs4lKDRGrEiaXkgpUq4kQ
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
@@ -10,3 +10,5 @@ Test: https://forms.gle/MwUpZEqTWg3dmek56
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 11.03.2021 17:25 | 11.03.2021 15:55 |                         1.4 | 13/21           |      61 | Fail   |
 | 2 | 13.03.2021 20:10 | 13.03.2021 20:25 |                         0.9 | 19/21           |      90 | Pass   |
+| 3 | 07.04.2024       |                  |                             | 15/21           |      71 | Pass   |
+| 4 | 13.04.2024       |                  |                             | 18/21           |      85 | Pass   |
