--- a/src/main/resources/homework32/homework32_statistic.org
+++ b/src/main/resources/homework32/homework32_statistic.org
@@ -3,16 +3,23 @@
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-Teet#1: https://forms.gle/m7wuojmr8CbXTWsJ7
+Test#1: https://forms.gle/m7wuojmr8CbXTWsJ7
+Answer: https://otus.ru/redirect/?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSeG5fOUAuTLpAcTAdq8KFyjdDVLvI07VmIywGKCnvOOjvZfsg%2Fviewscore%3Fviewscore%3DAE0zAgBMT-vZDNjLQ1VWFABQDWhTeX2JRa_Cin7H3dVleY_FJ3MUDXwpS3y5Ed0IpwJ6rcI
+
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 21.03.2021 09:50 | 21.03.2021 10:06 |                         1.5 | 5/10            |      50 | Fail   |
 | 2 | 21.03.2021 13:15 | 21.03.2021 13:25 |                         1.0 | 7/10            |      70 | Pass   |
 | 3 | 21.03.2021 13:25 | 21.03.2021 13:30 |                         0.5 | 9/10            |      90 | Pass   |
+| 4 | 13.04.2021       |                  |                             | 8/10            |      80 | Pass   |
 
 
 Test#2: https://forms.gle/pgjWTyZU5hosp3KU7
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSdGrBfY_yugwoN2io20wEkTbu_Fwrdrh-Ell9UcsOW1lqXWWw/viewscore?viewscore=AE0zAgBGpy6ZlBaRqGZDP-axKqc9uRc7A_ua3U9zovlhCs-aEXUY1cabVC_CJHvgXTVLxhI
+
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 20.03.2021 16:00 | 20.03.2021 16:45 |                         0.9 | 39/50           |      78 | Pass   |
+| 2 | 13.04.2021       |                  |                             | 42/50           |      84 | Pass   |
+
 
