--- a/src/main/resources/homework33/homework33_statistic.org
+++ b/src/main/resources/homework33/homework33_statistic.org
@@ -12,4 +12,4 @@ Max time: 2h 30 min
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 21.03.2021 14:45 | 21.03.2021 17:15 |                         2.0 | 47/80           |      58 | Fail   |
 | 2 | 28.03.2021 10:00 | 28.03.2021 12:30 |                         1.8 | 59/80           |      73 | Pass   |
-
+| 3 | 14.04.2024       |                  |                             | 60/80           |      75 | Pass   |
