--- a/src/main/resources/homework02/homework02_statistic.org
+++ b/src/main/resources/homework02/homework02_statistic.org
@@ -14,3 +14,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSeJifQTcc-KO6KSRYgcu7bJjCVN5P63
 | 4 |  17.11.2022 |            |                             |                 |      88 | Pass   |
 | 5 |  25.12.2022 |            |                             |                 |      70 | Pass   |
 | 6 |  17.09.2023 |            |                             |                 |      77 | Pass   |
+| 7 |  15.04.2023 |            |                             | 23/27           |      85 | Pass   |
