--- a/src/main/resources/homework03/homework03_statistic.org
+++ b/src/main/resources/homework03/homework03_statistic.org
@@ -6,11 +6,13 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSer_GEL-haPCsokLapdFOBcXGhNa62s
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-| # | Start date       | End date           | Average time response (min) | Correct answers | Percent | Result |
+| # |       Start date | End date           | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+--------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 17.11.2020 19:40 | 17.11.2020 : 19:55 |                             | 5/11            |      45 | Fail   |
 | 2 | 22.11.2020 16:40 | 22.11.2020 : 19:50 |                             | 11/11           |     100 | Pass   |
 | 3 | 07.02.2021 19:00 | 07.02.2020 : 19:10 |                         0.9 | 11/11           |     100 | Pass   |
-| 4 | 19.11.2022       |                    |                             |                 |      81 | Pass   |
-| 5 | 25.12.2022       |                    |                             |                 |      81 | Pass   |
-| 6 | 23.09.2023       |                    |                             |                 |     100 | Pass   |
+| 4 |       19.11.2022 |                    |                             |                 |      81 | Pass   |
+| 5 |       25.12.2022 |                    |                             |                 |      81 | Pass   |
+| 6 |       23.09.2023 |                    |                             |                 |     100 | Pass   |
+| 7 |       16.04.2024 |                    |                             | 11/11           |     100 | Pass   |
+
