--- a/src/main/resources/homework04/homework04_statistic.org
+++ b/src/main/resources/homework04/homework04_statistic.org
@@ -6,12 +6,13 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScycljT6BOJservmUA13ly2aclZLyNV
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин.  
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+| # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 22.11.2020 18:20 | 22.11.2020 18:55 |                             | 6/14            |      43 | Fail   |
 | 2 | 28.11.2020 14:00 | 28.11.2020 14:20 |                             | 13/14           |      92 | Pass   |
 | 3 | 07.02.2021 19:15 | 07.02.2021 19:30 |                         0.9 | 13/14           |      92 | Pass   |
-| 4 | 21.11.2022       |                  |                             |                 |      78 | Pass   |
-| 5 | 25.12.2022       |                  |                             |                 |      85 | Pass   |
-| 6 | 24.09.2023       |                  |                             |                 |      92 | Pass   |
+| 4 |       21.11.2022 |                  |                             |                 |      78 | Pass   |
+| 5 |       25.12.2022 |                  |                             |                 |      85 | Pass   |
+| 6 |       24.09.2023 |                  |                             |                 |      92 | Pass   |
+| 7 |       16.04.2024 |                  |                             | 11/14           |      78 | Pass   |
 
