--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -17,23 +17,20 @@ Test#1
 | 6 |       27.11.2022 |                  |                             |                 |     100 | Pass   |
 | 7 |       25.12.2022 |                  |                             |                 |      80 | Pass   |
 | 8 |       01.10.2023 |                  |                             |                 |      80 | Pass   |
+| 9 |       18.04.2024 |                  |                             | 3/5             |      60 | Fail   |
 
 
 
 Test2: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewform
 Answer: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewscore?viewscore=AE0zAgCeb6td5aJm4xusLiP-Mu_B9_I1ivKxwtlD6jxmPqBNJRPsct3Fqf3qBiSvRh1HyMA
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+| # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 29.11.2020 23:10 | 29.11.2020 00:10 |                         1.2 | 38/50           |      76 | Pass   |
 | 2 | 07.02.2021 20:45 | 07.02.2021 21:20 |                         0.7 | 42/50           |      84 | Pass   |
 | 3 | 03.04.2021 10:30 | 03.04.2021 12:00 |                         1.8 | 39/50           |      78 | Pass   |
-| 4 | 26.11.2022       |                  |                             | 45/50           |      90 | Pass   |
-| 5 | 25.12.2022       |                  |                             |                 |      96 | Pass   |
-| 6 | 01.10.2023       |                  |                             |                 |      98 | Pass   |
-
-
-
-
-
+| 4 |       26.11.2022 |                  |                             | 45/50           |      90 | Pass   |
+| 5 |       25.12.2022 |                  |                             |                 |      96 | Pass   |
+| 6 |       01.10.2023 |                  |                             |                 |      98 | Pass   |
+| 7 |       18.04.2024 |                  |                             | 47/50           |      94 | Pass   |
 
