--- a/src/main/resources/homework09/homework09_statistic.org
+++ b/src/main/resources/homework09/homework09_statistic.org
@@ -20,4 +20,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfw2tGT1VRB_T6VeXImuwMmXYbwJlDD
 | 10 | 29.12.2022       |                  |                             |                 |      66 | Fail   |
 | 11 | 30.12.2022       |                  |                             |                 |     100 | Pass   |
 | 12 | 14.10.2023       |                  |                             |                 |      75 | Pass   |
-
+| 13 | 20.04.2024       |                  |                             | 12/12           |     100 | Pass   |
