--- a/src/main/resources/homework12/homework12_statistic.org
+++ b/src/main/resources/homework12/homework12_statistic.org
@@ -14,3 +14,5 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSeu0zwsvAPVfoW7gdibciBGjhrLNazz
 | 4 | 24.04.2021 12:00 | 24.04.2021 11:20 |                         1.6 | 11/13           |      84 | Pass   |
 | 5 | 08.01.2023       |                  |                             |                 |      84 | Pass   |
 | 6 | 28.10.2023       |                  |                             |                 |      76 | Pass   |
+| 7 | 22.04.2024       |                  |                             | 10/13           |      76 | Pass   |
+
