--- a/src/main/resources/homework14/homework14_statistic.org
+++ b/src/main/resources/homework14/homework14_statistic.org
@@ -14,3 +14,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfblhDYD9ffap-TrVvY2JKVjV1a4gbn
 | 4 | 15.02.2021 22:40 | 15.02.2021 22:20 |                         1.5 | 19/24           |      79 | Pass   |
 | 5 | 08.01.2023       |                  |                             |                 |      79 | Pass   |
 | 6 | 05.11.2023       |                  |                             |                 |      66 | Pass   |
+| 7 | 23.04.2024       |                  |                             | 22/24           |      91 | Pass   |
