--- a/src/main/resources/homework23/homework23_statistic.org
+++ b/src/main/resources/homework23/homework23_statistic.org
@@ -13,4 +13,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSf4SVAT2CiezoHbHv2XvzwK93tGhZYV
 | 2 | 05.02.2021 10:45 | 04.02.2021 11:20 |                         0.7 | 48/50           |      96 | Pass   |
 | 3 | 23.02.2021 18:50 | 23.02.2021 19:50 |                         1.5 | 39/50           |      78 | Pass   |
 | 4 | 10.03.2024       |                  |                             | 38/50           |      76 | Pass   |
-
+| 5 | 29.04.2024       |                  |                             | 40/50           |      80 | Pass   |
