--- a/src/main/resources/homework22/homework22_statistic.org
+++ b/src/main/resources/homework22/homework22_statistic.org
@@ -15,3 +15,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSdHk9Tw6NxLujLbCfCguQv10mF6Bk1g
 | 5 | 09.03.2024       |                  |                             | 5/13            |      45 | Fail   |
 | 6 | 16.03.2024       |                  |                             | 5/13            |      45 | Fail   |
 | 7 | 23.03.2024       |                  |                             | 9/13            |      69 | Pass   |
+| 8 | 28.04.2024       |                  |                             | 9/13            |      69 | Pass   |
