--- a/src/main/resources/homework24/homework24_statistic.org
+++ b/src/main/resources/homework24/homework24_statistic.org
@@ -14,3 +14,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSc4UG8_Zr_sxyUIzbU-t9wIPXh-Qn1X
 | 3 | 22.02.2021 23:00 | 22.02.2021 23:50 |                         1.3 | 32/39           |      82 | Pass   |
 | 4 | 16.03.2024       |                  |                             | 26/39           |      66 | Pass   |
 | 5 | 30.03.2024       |                  |                             | 32/39           |      82 | Pass   |
+| 6 | 30.04.2024       |                  |                             | 34/39           |      89 | Pass   |
