--- a/src/main/resources/homework27/homework27_statistic.org
+++ b/src/main/resources/homework27/homework27_statistic.org
@@ -15,6 +15,7 @@ Answer: https://otus.ru/redirect/?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2
 | 5 | 19.03.2024       |                  |                             | 10/33           |      30 | Fail   |
 | 6 | 31.03.2024       |                  |                             | 21/33           |      61 | Fail   |
 | 7 | 06.04.2024       |                  |                             | 25/33           |      75 | Pass   |
+| 8 | 05.05.2024       |                  |                             | 16/33           |      55 | Fail   |
 
 
 Test#2: https://forms.gle/DPNTFBw64BSPrHj8A
@@ -25,4 +26,3 @@ Answer: https://otus.ru/redirect/?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 20.02.2021 18:40 | 20.02.2021 20:00 |                         1.6 | 34/50           |      68 | Pass   |
 | 2 | 21.02.2021 14:30 | 21.02.2021 15:15 |                         0.9 | 44/50           |      88 | Pass   |
-
