--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -7,18 +7,19 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrK
 Максимальное время ответа на один вопрос: 2 мин.  
 
 Test#1
-| # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
-|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 22.11.2020 20:20 | 22.11.2020 20:30 |                           2 | 2/5             |      45 | Fail   |
-| 2 | 29.11.2020 13:50 | 29.11.2020 14:00 |                           2 | 4/5             |      80 | Pass   |
-| 3 | 07.02.2021 19:50 | 07.02.2020 20:00 |                           2 | 5/5             |     100 | Pass   |
-| 4 |       21.11.2022 |                  |                             |                 |      60 | Fail   |
-| 5 |       26.11.2022 |                  |                             |                 |      60 | Fail   |
-| 6 |       27.11.2022 |                  |                             |                 |     100 | Pass   |
-| 7 |       25.12.2022 |                  |                             |                 |      80 | Pass   |
-| 8 |       01.10.2023 |                  |                             |                 |      80 | Pass   |
-| 9 |       18.04.2024 |                  |                             | 3/5             |      60 | Fail   |
-
+|  # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
+|----+------------------+------------------+-----------------------------+-----------------+---------+--------|
+|  1 | 22.11.2020 20:20 | 22.11.2020 20:30 |                           2 | 2/5             |      45 | Fail   |
+|  2 | 29.11.2020 13:50 | 29.11.2020 14:00 |                           2 | 4/5             |      80 | Pass   |
+|  3 | 07.02.2021 19:50 | 07.02.2020 20:00 |                           2 | 5/5             |     100 | Pass   |
+|  4 |       21.11.2022 |                  |                             |                 |      60 | Fail   |
+|  5 |       26.11.2022 |                  |                             |                 |      60 | Fail   |
+|  6 |       27.11.2022 |                  |                             |                 |     100 | Pass   |
+|  7 |       25.12.2022 |                  |                             |                 |      80 | Pass   |
+|  8 |       01.10.2023 |                  |                             |                 |      80 | Pass   |
+|  9 |       18.04.2024 |                  |                             | 3/5             |      60 | Fail   |
+| 10 |       05.05.2024 |                  |                             | 3/5             |      60 | Fail   |
+| 11 |       09.05.2024 |                  |                             | 5/5             |     100 | Pass   |
 
 
 Test2: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewform
