--- a/src/main/resources/homework31/homework31_statistic.org
+++ b/src/main/resources/homework31/homework31_statistic.org
@@ -11,3 +11,5 @@ Answer: https://otus.ru/redirect/?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2
 | 1 | 14.03.2021 10:20 | 14.03.2021 10:55 |                         1.8 | 15/20           |      75 | Pass   |
 | 2 | 14.03.2021 14:20 | 14.03.2021 14:30 |                         0.5 | 19/20           |      95 | Pass   |
 | 3 | 13.04.2024       |                  |                             | 17/20           |      85 | Pass   |
+| 4 | 16.05.2024       |                  |                             | 16/20           |      80 | Pass   |
+
