--- a/src/main/resources/homework06/homework06_statistic.org
+++ b/src/main/resources/homework06/homework06_statistic.org
@@ -14,4 +14,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfz64I0Md5MMF9t0yPv3KmqtRtZts_u
 | 4 | 27.12.2022 |          |                             |                 |      77 | Pass   |
 | 5 | 01.10.2023 |          |                             | 2/9             |      15 | Fail   |
 | 6 | 18.04.2024 |          |                             | 5/9             |      55 | Fail   |
-
+| 7 | 25.05.2024 |          |                             | 4/9             |      50 | Fail   |
