--- a/src/main/resources/homework21/homework21_statistic.org
+++ b/src/main/resources/homework21/homework21_statistic.org
@@ -6,14 +6,45 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSce1BZGFYxd6v2vgbVGRCMw-I2DHmpf
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-| # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
-|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 25.01.2021 21:30 | 25.01.2021 22:00 |                         1.5 | 10/20           |      50 | Fail   |
-| 2 | 27.01.2021 20:00 | 25.01.2021 22:30 |                         1.5 | 12/20           |      52 | Fail   |
-| 3 | 28.01.2021 21:10 | 25.01.2021 21:30 |                         1.0 | 14/20           |      70 | Pass   |
-| 4 | 24.02.2021 19:20 | 24.02.2021 19:35 |                         0.9 | 15/20           |      75 | Pass   |
-| 5 |       09.04.2023 |                  |                             | 11/20           |      55 | Fail   |
-| 6 |       24.04.2023 |                  |                             | 14/20           |      70 | Pass   |
-| 7 |       09.03.2024 |                  |                             | 11/20           |      55 | Fail   |
-| 8 |       16.03.2024 |                  |                             | 15/20           |      75 | Pass   |
-| 9 |       27.04.2024 |                  |                             | 15/20           |      75 | Pass   |
+|  # |       Start date | End date         | Average time response (min) | Correct answers | Percent | Result |
+|----+------------------+------------------+-----------------------------+-----------------+---------+--------|
+|  1 | 25.01.2021 21:30 | 25.01.2021 22:00 |                         1.5 | 10/20           |      50 | Fail   |
+|  2 | 27.01.2021 20:00 | 25.01.2021 22:30 |                         1.5 | 12/20           |      52 | Fail   |
+|  3 | 28.01.2021 21:10 | 25.01.2021 21:30 |                         1.0 | 14/20           |      70 | Pass   |
+|  4 | 24.02.2021 19:20 | 24.02.2021 19:35 |                         0.9 | 15/20           |      75 | Pass   |
+|  5 |       09.04.2023 |                  |                             | 11/20           |      55 | Fail   |
+|  6 |       24.04.2023 |                  |                             | 14/20           |      70 | Pass   |
+|  7 |       09.03.2024 |                  |                             | 11/20           |      55 | Fail   |
+|  8 |       16.03.2024 |                  |                             | 15/20           |      75 | Pass   |
+|  9 |       27.04.2024 |                  |                             | 15/20           |      75 | Pass   |
+| 10 |       03.06.2024 |                  |                             | 13/20           |      65 | Pass   |
+
+
+ 1df +
+ 2d +
+ 3f +
+ 4b +
+ 5a
+ 6b +
+ 7e +
+ 8f
+ 9d +
+10c +
+11adfhi 
+12b
+13cdef
+14bce
+15e +
+16c 
+17e +
+18c +
+19e +
+20d +
+
+
+20 100
+13 x
+
+20x = 1300
+
+(/ 1300 20)
